CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(Hash_Algorithm_Evaluation)

SET(CMAKE_CXX_FLAGS_RELEASE                 "${CMAKE_CXX_FLAGS_RELEASE} /MT")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY          ${CMAKE_SOURCE_DIR}/bin)
SET(EXECUTABLE_OUTPUT_PATH                  ${CMAKE_SOURCE_DIR}/bin)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib/Win32/Release)

ADD_EXECUTABLE(${PROJECT_NAME} src/main.cpp src/HashMgr.cpp src/HashMgr.h)


IF (MSVC)
    IF( CMAKE_SIZEOF_VOID_P EQUAL 4 )     
        TARGET_LINK_LIBRARIES(${PROJECT_NAME} cryptlib.lib)
        TARGET_LINK_LIBRARIES(${PROJECT_NAME} libcrypto.lib)
    ENDIF()
ENDIF()
